--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "js-yaml": "^4.0.0",
     "nodemon": "^2.0.7",
     "oas-tools": "^2.1.8",
-    "ramda": "^0.27.1"
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.3",
+    "ramda": "^0.27.1",
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "eslint": "^7.23.0"
