--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
         "semi-style": ["error", "last"],
         "quotes": ["error", "double"],
         "semi": ["error", "always"],
-        "no-trailing-spaces": [2, { "skipBlankLines": true }]
+        "no-trailing-spaces": [2, { "skipBlankLines": true }],
+        "block-spacing": [2, "always"]
     }
 }
