end of 5th task

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "ramda": "^0.27.1",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.23.0"
