--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-joi-validation": "^5.0.0",
     "joi": "^17.4.0",
     "js-yaml": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
     "oas-tools": "^2.1.8",
     "pg": "^8.6.0",
