test and linters

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "lintSpec": "spectral lint ./spec/spec.yaml",
     "start": "nodemon ./src/app",
     "lint": "eslint ./",
-    "createDB": "node ./script/createDb"
+    "createDB": "node ./script/createDb",
+    "test": "jest -i",
+    "test:unit": "jest ./test/unit/* -i",
+    "test:functional": "jest ./test/functional/* -i"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
+    "jest": "^27.0.6",
     "joi": "^17.4.0",
     "js-yaml": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -26,9 +30,12 @@
     "pg-hstore": "^2.3.3",
     "ramda": "^0.27.1",
     "sequelize": "^6.6.2",
+    "supertest": "^6.1.3",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "eslint": "^7.23.0"
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4"
   }
 }
